--- a/_posts/2021-04-30-title.markdown
+++ b/_posts/2021-04-30-title.markdown
@@ -23,7 +23,7 @@ Identity and Access Management = IAM
 
 데이터에 접근하려면 우리가 만든 클러스터는 권한(permission)이 있어야 하고 그걸 증명하는데 쓰이는 게 IAM이다. 대표적인 예로 S3에 저장해둔 데이터를 일부분 Redshift로 빠르게 복사할 때 **COPY**라는 방법을 쓰는데 거기서 IAM 권한을 증명하게 된다. AWS에서는 IAM 권한을 만들어서 클러스터에 붙여서 사용하라고 추천하고 있다.
 
-### **To create an IAM role for Amazon Redshift**
+**To create an IAM role for Amazon Redshift**
 
 1. AWS IAM 콘솔로 들어간다. <a href="https://console.aws.amazon.com/iam/" target="blank">https://console.aws.amazon.com/iam/</a>
 
