--- a/_poetry/2021-04-30-bol4.markdown
+++ b/_poetry/2021-04-30-bol4.markdown
@@ -7,31 +7,23 @@ date: 2021-04-30 22:00:00
 <blockquote>
 
 엄마는 아빠는 다 나만 바라보는데
-
 친구들은 사람들은 다 나만 바라보는데
-
 내 마음은 그런 게 아닌데 자꾸만 멀어만 가
 <br>
 <br>
-
 근데 가끔은 너무 행복하면 또 아파올까 봐
-
 내가 가진 이 행복들을 누군가가 가져갈까 봐
+<br>
 
 그래도 난 어쩌면
-
 내가 이 세상에 밝은 빛이라도 될까 봐
-
-**어쩌면 그 모든 아픔을 내딛고서라도**
-
+어쩌면 그 모든 아픔을 내딛고서라도
 짧게 빛을 내볼까 봐
+<br>
 
-**포기할 수가 없어**
-
+포기할 수가 없어
 하루도 맘 편히 잠들 수가 없던 내가
-
 이렇게라도 일어서 보려고 하면
-
 내가 날 찾아줄까 봐
 </blockquote>
 
@@ -44,10 +36,8 @@ date: 2021-04-30 22:00:00
 길고 긴 삶을 살아가는 시. 캄캄한 밤을 헤쳐나가야 했던 마음을 담은 노래. 나에겐 꼭 그렇게 들린다. 나에게 좋은 노래. 그리고 그 시절 아팠던 나를 꼭 안아줄 수 있는 노래. 
 
 <br>
-<div class="img_row">
-	<img class="col two" src="/img/bol4.jpg" width="500" height="300">
-	<img class="col one" src="/img/bol42.jpg" width="500" height="300">
-</div>
+<img class="col two" src="/img/bol4.png" width="500" height="300"/>
+<img class="col one" src="/img/bol42.png" width="500" height="300"/>
 <br>
 
 나는 한때 내가 이 세상에 사라지길 바랬어
