--- a/_poetry/2021-04-30-bol4.markdown
+++ b/_poetry/2021-04-30-bol4.markdown
@@ -12,21 +12,26 @@ date: 2021-04-30 22:00:00
 <br>
 <br>
 근데 가끔은 너무 행복하면 또 아파올까 봐
+<br>
 내가 가진 이 행복들을 누군가가 가져갈까 봐
 <br>
 
-그래도 난 어쩌면
-내가 이 세상에 밝은 빛이라도 될까 봐
-어쩌면 그 모든 아픔을 내딛고서라도
-짧게 빛을 내볼까 봐
+그래도 난 어쩌면 내가 이 세상에 밝은 빛이라도 될까 봐
 <br>
-
+어쩌면 그 모든 아픔을 내딛고서라도 짧게 빛을 내볼까 봐
+<br>
 포기할 수가 없어
+<br>
 하루도 맘 편히 잠들 수가 없던 내가
+<br>
 이렇게라도 일어서 보려고 하면
 내가 날 찾아줄까 봐
 </blockquote>
+<br>
+<img class="col three" src="/img/bol42.jpg" width="500" height="300"/>
 
+<br>
+<br>
 문득 음악을 듣다가 가사가 마음에 들어왔다. 노래가 좋다는 생각이 들었다. 여러 번, 한 마디 한 마디가. 
 
 어쩜 이렇게 비유를 잘 할 수 있는 걸까.
@@ -37,7 +42,6 @@ date: 2021-04-30 22:00:00
 
 <br>
 <img class="col three" src="/img/bol4.jpg" width="500" height="300"/>
-<img class="col three" src="/img/bol42.png" width="500" height="300"/>
 <br>
 
 나는 한때 내가 이 세상에 사라지길 바랬어
