--- a/_deep_learning/2021-05-03-1일차정리.markdown
+++ b/_deep_learning/2021-05-03-1일차정리.markdown
@@ -21,7 +21,7 @@ d = a*b+c
 # 17이 튀어나오지 않음
 print(d)
 {% endhighlight %}
->> Tensor("add:0", shape=(), dtype=float32)
+> Tensor("add:0", shape=(), dtype=float32)
 
 d라는 노드 자체를 출력. 노드의 마지막이 덧셈이므로 add가 튀어나옴. 
 
@@ -38,7 +38,7 @@ result = sess.run(d)
 print(result)
 
 {% endhighlight %}
->> 17.0
+> 17.0
 
 텐서플로의 큰 단점이 위의 사항
 
@@ -62,6 +62,7 @@ print(d)
 {% endhighlight %}
 
 ### Tensorflow 1.x로 실습
+
 {% highlight python %}
 
 W = tf.Variable(tf.random_normal(shape=[1], name='w'))
