--- a/_posts/2021-05-07-title.markdown
+++ b/_posts/2021-05-07-title.markdown
@@ -16,7 +16,7 @@ description: COPY 명령 빠르게 사용
 ### 단계 5: COPY 명령 실행
 <br>
 
-* REGION
+### REGION
 
 가능하다면 항상 Amazon Redshift 클러스터와 동일한 AWS 리전에 로드 데이터를 위치시켜야 합니다. 데이터와 클러스터가 동일한 리전에 있는 경우 지연 시간이 줄어들고 리전 간 데이터 전송 비용을 피할 수 있습니다. 
 <br>
@@ -40,3 +40,21 @@ gzip
 region 'us-east-1';
 
 {% endhighlight %}
+
+<br>
+<br>
+
+### 여러 파일에서 병렬로 로드
+<br>
+병렬로 로드할 때 데이터 효과적으로 로드.
+<br>
+파일 수가 클러스터에 있는 조각 수의 배수가 되도록 데이터 분할
+<br>
+<br>
+예: dc2.large 노드는 각각 조각이 2개. 4노드 클러스터는 8개의 조각 가짐. -> 파일을 8개로 쪼개서 병렬로 로드하면 더 빠르게 로드 가능. 반면 1개 단일 파일로 로드하면 시간 오래 걸림
+<br>
+<br>
+
+* 1개 단일 파일 COPY 로드시 시간 1m 42s
+
+* 1개 파일 8개로 쪼개서 병렬 COPY 로드시 시간 17s
