--- a/_dopamine_fast/2021-08-21-day3.md
+++ b/_dopamine_fast/2021-08-21-day3.md
@@ -22,7 +22,7 @@ date: 2021-08-21 23:22:00
 
 나간 이유는 에그타르트를 먹기 위해서였다. 
 
-딱 1개만 먹으려고 나갔는데 비가 온 직후라 날씨가 선선하고 좋았다. 하지만 10분 뒤에 해 쩅쩅이 시작되어 발걸음을 재촉해 목적지에 도착했다.
+딱 1개만 먹으려고 나갔다. 비가 온 직후라 날씨가 선선하고 좋았다. 하지만 10분 뒤에 해 쨍쨍이 시작되어 발걸음을 재촉해 목적지에 도착했다.
 
 아직 온기가 남아있는 에그타르트를 들고 오랜만에 바뀐 지하 쇼핑몰 구조를 훑었다.
 
