--- a/_posts/2022-11-08-빅데이터를 지탱하는 기술.md
+++ b/_posts/2022-11-08-빅데이터를 지탱하는 기술.md
@@ -5,7 +5,7 @@ date: 2022-10-20 15:30:00
 description: 핵심 키워드 및 개념 복습
 ---
 
-# 1. 서문
+# 0. 서문
 <br>
 
 - data discovery : 데이터 검색. 시각화 기법. 프로젝트 단위로 데이터를 살필 때 사용. 
@@ -22,7 +22,7 @@ description: 핵심 키워드 및 개념 복습
 <br>
 <br>
 
-### 1-1. 구성
+### 0-1. 구성
 <br>
 1장 : 빅데이터 기술의 배경, 스몰데이터 기술, 간단한 파이썬 스크립트, data discovery
 <br>
@@ -46,6 +46,44 @@ description: 핵심 키워드 및 개념 복습
 <br>
 기초 : spark로 대화적 세션으로 데이터 분석
 응용 : 데이터 처리 자동화. 워크플로 관리 소프트웨어로 airflow 도입, 매일 한 번씩 데이터 마트 업데이트하는 배치 처리 실행
+
+<br>
+<br>
+
+# 1. 빅데이터의 기초 지식
+
+- ~2011년 : hadoop, NoSQL 데이터베이스 발전
+- 2012년 : 클라우드 방식의 DW, BI 도구 보급
+- 2013년~ : 스트림 처리, AdHoc 분석 환경 확충
+
+<br>
+<br>
+
+데이터 분석 방법, 데이터 처리 시간 단축
+
+
+internet  -> RDB, NoSQL, Text Data -> Hadoop
+
+- Hadoop : 다수의 컴퓨터에서 대량의 데이터를 처리하기 위한 시스템. 구글의 분산처리 프레임워크인 MapReduce를 참고해 제작. 
+Hive를 통해 SQL 쿼리를 하둡에서 실행가능해진 뒤로 프로그래밍 없이 데이터 집계 가능. 
+<br>
+<br>
+
+- NoSQL : 키 밸류 스토어(다수의 키와 값을 관련지어 저장), 도큐멘트 스토어(JSON과 같은 복잡한 데이터 구조 저장), 와이드 칼럼 스토어(여러 키를 사용하여 높은 확장성 제공)
+<br>
+<br>
+MongoDB : 도큐먼트 스토어
+<br>
+CouchDB : 도큐먼트 스토어
+<br>
+Riak : 키밸류 스토어
+<br>
+Cassandra : 와이드 칼럼 스토어
+<br>
+Redis : 키밸류 스토어
+<br>
+<br>
+
 
 
 
