--- a/_posts/2022-11-08-빅데이터를 지탱하는 기술.md
+++ b/_posts/2022-11-08-빅데이터를 지탱하는 기술.md
@@ -84,6 +84,35 @@ Redis : 키밸류 스토어
 <br>
 <br>
 
+데이터 처리를 위한 클라우드 서비스
+- Amazon Elastic MapReduce : 클라우드를 위한 hadoop
+- 구글 BigQuery : DW
+- Azure HDInsight : 클라우드를 위한 hadoop
+- Amazon Redshift : DW
+<br>
+<br>
+
+데이터 규모 판단
+<br>
+스몰데이터 : 백만 ~ 천만 로우. 수GB
+<br>
+<br>
+
+데이터 디스커버리 ~= BI
+<br>
+BI : DW와 조합해 사용한 경영자용 시각화 시스템
+
+<br>
+<br>
+
+데이터 전송 방법
+- 벌크형(bulk): 정기적으로 데이터를 수집할 때 사용
+- 스트림형(streaming): 차례차례 생성되는 데이터를 끊임없이 계속해서 보낼 때 사용
+
+<br>
+
+
+
 
 
 
