문단 간격 수정

--- a/_posts/2022-11-08-빅데이터를 지탱하는 기술.md
+++ b/_posts/2022-11-08-빅데이터를 지탱하는 기술.md
@@ -113,6 +113,7 @@ BI : DW와 조합해 사용한 경영자용 시각화 시스템
 <br>
 
 ---
+<br>
 # 2. 빅데이터의 탐색
 
 데이터 집계
@@ -173,13 +174,15 @@ BI : DW와 조합해 사용한 경영자용 시각화 시스템
 <br>
 <br>
 
-### 데이터마트는 비정규화 테이블로
+##### 데이터마트는 비정규화 테이블로
+<br>
 
-### DW는 스타스키마가 성능 우수
+##### DW는 스타스키마가 성능 우수
 <br>
 <br>
 
 ---
+<br>
 # 3. 빅데이터의 분산 처리
 <br>
 <br>
@@ -187,6 +190,16 @@ BI : DW와 조합해 사용한 경영자용 시각화 시스템
 Hadoop에서 사용할 수 있는 열 지향 스토리지
 - Apache ORC : 구조화 데이터를 위한 열 지향 스토리지, 처음에 스키마 정한 후 데이터 저장
 - Apache Parquet : 스키마리스에 가까운 데이터 구조, JSON 같은 뒤얽힌 데이터도 그대로 저장 가능
+<br>
+<br>
+
+Hadoop의 기본 구성요소
+- HDFS : 분산 파일 시스템
+- YARN (Yet Another Resource Negotiator) : 리소스 관리자 (Mesos 등)
+- MapReduce : 분산 데이터 처리 (Spark 등)
+
+
+
 
 
 
