3장 정리 완료

--- a/_posts/2022-11-08-빅데이터를 지탱하는 기술.md
+++ b/_posts/2022-11-08-빅데이터를 지탱하는 기술.md
@@ -51,6 +51,8 @@ description: 핵심 키워드 및 개념 복습
 <br>
 
 ---
+<br>
+
 # 1. 빅데이터의 기초 지식
 
 - ~2011년 : hadoop, NoSQL 데이터베이스 발전
@@ -174,10 +176,10 @@ BI : DW와 조합해 사용한 경영자용 시각화 시스템
 <br>
 <br>
 
-##### 데이터마트는 비정규화 테이블로
+#### 데이터마트는 비정규화 테이블로
 <br>
 
-##### DW는 스타스키마가 성능 우수
+#### DW는 스타스키마가 성능 우수
 <br>
 <br>
 
@@ -197,6 +199,94 @@ Hadoop의 기본 구성요소
 - HDFS : 분산 파일 시스템
 - YARN (Yet Another Resource Negotiator) : 리소스 관리자 (Mesos 등)
 - MapReduce : 분산 데이터 처리 (Spark 등)
+<br>
+<br>
+
+분산 데이터 처리 및 쿼리 엔진
+- MapReduce -> Hive (on Tez)
+- Hive on Tez : Hive 가속화. 1회의 MapReduce 스테이지가 끝날 떄까지 기다리지 않고 처리가 끝난 데이터를 차례대호 후속 처리에 전달해서 쿼리 전체 실행 시간 단축
+- Hive on Spark
+<br>
+<br>
+
+대화형 쿼리 엔진
+- 대화형 쿼리 실행만 전문하로 하는 쿼리 엔진
+- Apache Impala, Presto
+- 순간 최대 속도를 높이기 위해 모든 오버헤드가 제거되어 사용할 수 있는 리소스를 최대한 활용
+<br>
+<br>
+
+성질이 다른 쿼리 엔진 구분
+- Hive : 대량의 비구조화 데이터를 기공하는 무거운 배치 처리, 높은 처리량으로 리소스를 활용
+- Impala, Presto : 위의 처리로 구조화된 데이터를 대화식으로 집계할 때 지연이 적은 쿼리엔진 사용
+<br>
+<br>
+
+Spark
+- MapReduce보다 효율적인 데이터 처리 실현. 인메모리 형의 고속 데이터 처리.
+- 대량의 메모리로 고속화 실현
+- MapReduce 대체
+- Spark SQL : SQL 쿼리
+- Spark Streaming : 스트림 처리 수행
+<br>
+<br>
+
+중간정리
+- 배치형 쿼리 엔진 : Hive, 집계시 느릴 수 있음
+- 대화형 쿼리 엔진 : Presto, 빠른 집계
+<br>
+<br>
+
+효율적 쿼리 작성 방법
+- 튜닝 기법 적용할 수 있는지 확인
+- join 되는 테이블에서 조건이 없으면 바로 조인하는 게 손해임. 
+- 팩트테이블을 서브 쿼리에 넣어서 작게 할 수 있는지 고려할 것
+- 쿼리 엔진에 있는 '모범 사례' 와 '쿼리 최적화'를 숙지할 것
+<br>
+<br>
+
+Presto
+- ORC 형식의 로드에 최적화. 열 지향 데이터 구조로 되어 있어야.
+- 너무 큰 쿼리는 안됨
+- 메모리상에서 처리(인메모리)
+- 분산 결합. 브로드캐스트 결합(분산 결합 명시적으로 무효화해야)
+- 열 지향 집계 매우 빠르게 실행 가능
+<br><br>
+
+데이터 분석의 프레임워크 비교
+- MPP 데이터베이스 : 스토리지 및 계산 노드 일체화. ETL만 해결되면 SQL만으로 데이터 집계. 다른 기술 필요 없음. 
+<br>
+but 확장성, 유연성에서는 분산 시스템 이용해야. 
+<br>
+시각화를 위한 데이터 마트로는 MPP 데이터베이스가 유력. BI 도구와도 조합 역사 깊음. 
+<br>
+**완성한 비정규화 테이블을 고속으로 집계하는 데 최적**
+<br><br>
+
+- Hive : 데이터양에 좌우되지 않는 쿼리 엔진
+<br>대규모 배치처리 꾸준히 실행 장점
+<br> 텍스트 데이터 가공, 열 지향 스토리지로 적합
+<br> 대화성보다는 안전성에 방점
+<br><br>
+- Presto : 속도 중시 + 대화식으로 특화된 쿼리 엔진
+<br>속도를 위해 다양한 것 희생
+<br> 쿼리 실행 중 장애 발생하면 처음부터 해야 함
+<br> 실행이 빠름
+<br> 텍스트 처리 ETL에는 적합 X
+<br> <br>
+- Spark : 분산 시스템을 사용한 프로그래밍 환경
+<br> 인메모리 데이터 처리, 대화형 쿼리 실행에 적합
+<br> 장점은 ETL프로세스에서 SQL에 이르기까지의 일련의 흐름을 하나의 데이터 파이프라인으로 기술할 수 있음
+<br> 여러 번 이용하는 데이터는 캐시에 올려놓거나 디스크에 스왑(swap)함으로써 메모리를 해제하는 등 메모리의 사용을 제어 가능
+<br> 
+<br>
+
+ 
+
+
+
+
+
 
 
 
