--- a/_posts/2022-11-08-빅데이터를 지탱하는 기술.md
+++ b/_posts/2022-11-08-빅데이터를 지탱하는 기술.md
@@ -280,6 +280,21 @@ but 확장성, 유연성에서는 분산 시스템 이용해야.
 <br> 여러 번 이용하는 데이터는 캐시에 올려놓거나 디스크에 스왑(swap)함으로써 메모리를 해제하는 등 메모리의 사용을 제어 가능
 <br> 
 <br>
+---
+<br>
+
+# 4. 빅데이터의 축적
+
+객체 스토리지
+- Hadoop의 HDFS, Amazon S3
+- 객체 스토리지에서 효율적으로 처리할 수 있는 파일 크기 : 1MB ~ 1GB
+<br><br>
+
+데이터 전송 종류
+- 벌크형 : 여러 번 전송 재실행 가능, 워크플로와의 
+- 스트리밍형 : 재실행 어려움
+
+
 
  
 
